; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_log.c_ngx_http_lua_inject_log_api.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_log.c_ngx_http_lua_inject_log_api.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ngx_http_lua_ngx_log = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"log\00", align 1
@ngx_http_lua_print = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"print\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ngx_http_lua_inject_log_api(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @ngx_http_lua_inject_log_consts(i32* %3)
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @ngx_http_lua_ngx_log, align 4
  %7 = call i32 @lua_pushcfunction(i32* %5, i32 %6)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @lua_setfield(i32* %8, i32 -2, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @ngx_http_lua_print, align 4
  %12 = call i32 @lua_pushcfunction(i32* %10, i32 %11)
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @lua_setglobal(i32* %13, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @ngx_http_lua_inject_log_consts(i32*) #1

declare dso_local i32 @lua_pushcfunction(i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_setglobal(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
